[tool.poetry]
name = "metaculus"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.6.9"
ergo = {git = "https://github.com/oughtinc/ergo.git"}
beautifulsoup4 = "^4.9.3"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
